# rust-api

./: .env  Cargo.toml  Makefile  README.md  docker-compose.yml
migrations/: 20230414020550_init.up.sql  20230415173103_init.down.sql  20230415173103_init.up.sql  20230617204203_init.up.sql
src/: main.rs  model.rs  schema.rs  services.rs
